versions/0.9.0/_sources/refs/_aws-cdk_aws-elasticloadbalancingv2.rst.txt
.. @jsii-pacmak:meta@ {"fingerprint":"ApSpBsSkRyc6Tt/MUgVMEKnkrNzmzLuOqv66fcD/drY="}

@aws-cdk/aws-elasticloadbalancingv2
===================================

.. tabs::

   .. group-tab:: C#

      View in `Nuget <https://www.nuget.org/packages/Amazon.CDK.AWS.ElasticLoadBalancingV2/0.9.0>`_

      **csproj**:

      .. code-block:: xml

         <PackageReference Include="Amazon.CDK.AWS.ElasticLoadBalancingV2" Version="0.9.0" />

      **dotnet**:

      .. code-block:: console

         dotnet add package Amazon.CDK.AWS.ElasticLoadBalancingV2 --version 0.9.0

      **packages.config**:

      .. code-block:: xml

         <package id="Amazon.CDK.AWS.ElasticLoadBalancingV2" version="0.9.0" />


   .. group-tab:: Java

      View in `Maven Central <https://repo1.maven.org/maven2/software/amazon/awscdk/elasticloadbalancingv2/0.9.0/>`_

      **Apache Buildr**:

      .. code-block:: none

         'software.amazon.awscdk:elasticloadbalancingv2:jar:0.9.0'

      **Apache Ivy**:

      .. code-block:: xml

         <dependency groupId="software.amazon.awscdk" name="elasticloadbalancingv2" rev="0.9.0"/>

      **Apache Maven**:

      .. code-block:: xml

         <dependency>
           <groupId>software.amazon.awscdk</groupId>
           <artifactId>elasticloadbalancingv2</artifactId>
           <version>0.9.0</version>
         </dependency>

      **Gradle / Grails**:

      .. code-block:: none

         compile 'software.amazon.awscdk:elasticloadbalancingv2:0.9.0'

      **Groovy Grape**:

      .. code-block:: none

         @Grapes(
         @Grab(group='software.amazon.awscdk', module='elasticloadbalancingv2', version='0.9.0')
         )


   .. group-tab:: JavaScript

      View in `NPM <https://www.npmjs.com/package/@aws-cdk/aws-elasticloadbalancingv2/v/0.9.0>`_

      **npm**:

      .. code-block:: console

         $ npm i @aws-cdk/aws-elasticloadbalancingv2@0.9.0

      **package.json**:

      .. code-block:: js

         {
           "@aws-cdk/aws-elasticloadbalancingv2": "^0.9.0"
         }

      **yarn**:

      .. code-block:: console

         $ yarn add @aws-cdk/aws-elasticloadbalancingv2@0.9.0


   .. group-tab:: TypeScript

      View in `NPM <https://www.npmjs.com/package/@aws-cdk/aws-elasticloadbalancingv2/v/0.9.0>`_

      **npm**:

      .. code-block:: console

         $ npm i @aws-cdk/aws-elasticloadbalancingv2@0.9.0

      **package.json**:

      .. code-block:: js

         {
           "@aws-cdk/aws-elasticloadbalancingv2": "^0.9.0"
         }

      **yarn**:

      .. code-block:: console

         $ yarn add @aws-cdk/aws-elasticloadbalancingv2@0.9.0



.. mdinclude:: ./__aws-cdk_aws-elasticloadbalancingv2.README.md

Reference
---------

.. py:module:: @aws-cdk/aws-elasticloadbalancingv2

ListenerArn
^^^^^^^^^^^

.. py:class:: ListenerArn(valueOrFunction, [displayName])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.ElasticLoadBalancingV2;

      .. code-tab:: java

         import software.amazon.awscdk.services.elasticloadbalancingv2.ListenerArn;

      .. code-tab:: javascript

         const { ListenerArn } = require('@aws-cdk/aws-elasticloadbalancingv2');

      .. code-tab:: typescript

         import { ListenerArn } from '@aws-cdk/aws-elasticloadbalancingv2';



   :extends: :py:class:`@aws-cdk/cdk.Arn`
   :param valueOrFunction: What this token will evaluate to, literal or function.
   :type valueOrFunction: any
   :param displayName: A human-readable display hint for this Token
   :type displayName: string or undefined

ListenerCertificateArn
^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: ListenerCertificateArn(valueOrFunction, [displayName])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.ElasticLoadBalancingV2;

      .. code-tab:: java

         import software.amazon.awscdk.services.elasticloadbalancingv2.ListenerCertificateArn;

      .. code-tab:: javascript

         const { ListenerCertificateArn } = require('@aws-cdk/aws-elasticloadbalancingv2');

      .. code-tab:: typescript

         import { ListenerCertificateArn } from '@aws-cdk/aws-elasticloadbalancingv2';



   :extends: :py:class:`@aws-cdk/cdk.Arn`
   :param valueOrFunction: What this token will evaluate to, literal or function.
   :type valueOrFunction: any
   :param displayName: A human-readable display hint for this Token
   :type displayName: string or undefined

ListenerRuleArn
^^^^^^^^^^^^^^^

.. py:class:: ListenerRuleArn(valueOrFunction, [displayName])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.ElasticLoadBalancingV2;

      .. code-tab:: java

         import software.amazon.awscdk.services.elasticloadbalancingv2.ListenerRuleArn;

      .. code-tab:: javascript

         const { ListenerRuleArn } = require('@aws-cdk/aws-elasticloadbalancingv2');

      .. code-tab:: typescript

         import { ListenerRuleArn } from '@aws-cdk/aws-elasticloadbalancingv2';



   :extends: :py:class:`@aws-cdk/cdk.Arn`
   :param valueOrFunction: What this token will evaluate to, literal or function.
   :type valueOrFunction: any
   :param displayName: A human-readable display hint for this Token
   :type displayName: string or undefined

LoadBalancerArn
^^^^^^^^^^^^^^^

.. py:class:: LoadBalancerArn(valueOrFunction, [displayName])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.ElasticLoadBalancingV2;

      .. code-tab:: java

         import software.amazon.awscdk.services.elasticloadbalancingv2.LoadBalancerArn;

      .. code-tab:: javascript

         const { LoadBalancerArn } = require('@aws-cdk/aws-elasticloadbalancingv2');

      .. code-tab:: typescript

         import { LoadBalancerArn } from '@aws-cdk/aws-elasticloadbalancingv2';



   :extends: :py:class:`@aws-cdk/cdk.Arn`
   :param valueOrFunction: What this token will evaluate to, literal or function.
   :type valueOrFunction: any
   :param displayName: A human-readable display hint for this Token
   :type displayName: string or undefined

LoadBalancerCanonicalHostedZoneId
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: LoadBalancerCanonicalHostedZoneId(valueOrFunction, [displayName])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.ElasticLoadBalancingV2;

      .. code-tab:: java

         import software.amazon.awscdk.services.elasticloadbalancingv2.LoadBalancerCanonicalHostedZoneId;

      .. code-tab:: javascript

         const { LoadBalancerCanonicalHostedZoneId } = require('@aws-cdk/aws-elasticloadbalancingv2');

      .. code-tab:: typescript

         import { LoadBalancerCanonicalHostedZoneId } from '@aws-cdk/aws-elasticloadbalancingv2';



   :extends: :py:class:`@aws-cdk/cdk.CloudFormationToken`
   :param valueOrFunction: What this token will evaluate to, literal or function.
   :type valueOrFunction: any
   :param displayName: A human-readable display hint for this Token
   :type displayName: string or undefined

LoadBalancerDnsName
^^^^^^^^^^^^^^^^^^^

.. py:class:: LoadBalancerDnsName(valueOrFunction, [displayName])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.ElasticLoadBalancingV2;

      .. code-tab:: java

         import software.amazon.awscdk.services.elasticloadbalancingv2.LoadBalancerDnsName;

      .. code-tab:: javascript

         const { LoadBalancerDnsName } = require('@aws-cdk/aws-elasticloadbalancingv2');

      .. code-tab:: typescript

         import { LoadBalancerDnsName } from '@aws-cdk/aws-elasticloadbalancingv2';



   :extends: :py:class:`@aws-cdk/cdk.CloudFormationToken`
   :param valueOrFunction: What this token will evaluate to, literal or function.
   :type valueOrFunction: any
   :param displayName: A human-readable display hint for this Token
   :type displayName: string or undefined

LoadBalancerFullName
^^^^^^^^^^^^^^^^^^^^

.. py:class:: LoadBalancerFullName(valueOrFunction, [displayName])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.ElasticLoadBalancingV2;

      .. code-tab:: java

         import software.amazon.awscdk.services.elasticloadbalancingv2.LoadBalancerFullName;

      .. code-tab:: javascript

         const { LoadBalancerFullName } = require('@aws-cdk/aws-elasticloadbalancingv2');

      .. code-tab:: typescript

         import { LoadBalancerFullName } from '@aws-cdk/aws-elasticloadbalancingv2';



   :extends: :py:class:`@aws-cdk/cdk.CloudFormationToken`
   :param valueOrFunction: What this token will evaluate to, literal or function.
   :type valueOrFunction: any
   :param displayName: A human-readable display hint for this Token
   :type displayName: string or undefined

LoadBalancerName
^^^^^^^^^^^^^^^^

.. py:class:: LoadBalancerName(valueOrFunction, [displayName])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.ElasticLoadBalancingV2;

      .. code-tab:: java

         import software.amazon.awscdk.services.elasticloadbalancingv2.LoadBalancerName;

      .. code-tab:: javascript

         const { LoadBalancerName } = require('@aws-cdk/aws-elasticloadbalancingv2');

      .. code-tab:: typescript

         import { LoadBalancerName } from '@aws-cdk/aws-elasticloadbalancingv2';



   :extends: :py:class:`@aws-cdk/cdk.CloudFormationToken`
   :param valueOrFunction: What this token will evaluate to, literal or function.
   :type valueOrFunction: any
   :param displayName: A human-readable display hint for this Token
   :type displayName: string or undefined

LoadBalancerSecurityGroups
^^^^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: LoadBalancerSecurityGroups(valueOrFunction, [displayName])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.ElasticLoadBalancingV2;

      .. code-tab:: java

         import software.amazon.awscdk.services.elasticloadbalancingv2.LoadBalancerSecurityGroups;

      .. code-tab:: javascript

         const { LoadBalancerSecurityGroups } = require('@aws-cdk/aws-elasticloadbalancingv2');

      .. code-tab:: typescript

         import { LoadBalancerSecurityGroups } from '@aws-cdk/aws-elasticloadbalancingv2';



   :extends: :py:class:`@aws-cdk/cdk.CloudFormationToken`
   :param valueOrFunction: What this token will evaluate to, literal or function.
   :type valueOrFunction: any
   :param displayName: A human-readable display hint for this Token
   :type displayName: string or undefined

TargetGroupArn
^^^^^^^^^^^^^^

.. py:class:: TargetGroupArn(valueOrFunction, [displayName])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.ElasticLoadBalancingV2;

      .. code-tab:: java

         import software.amazon.awscdk.services.elasticloadbalancingv2.TargetGroupArn;

      .. code-tab:: javascript

         const { TargetGroupArn } = require('@aws-cdk/aws-elasticloadbalancingv2');

      .. code-tab:: typescript

         import { TargetGroupArn } from '@aws-cdk/aws-elasticloadbalancingv2';



   :extends: :py:class:`@aws-cdk/cdk.Arn`
   :param valueOrFunction: What this token will evaluate to, literal or function.
   :type valueOrFunction: any
   :param displayName: A human-readable display hint for this Token
   :type displayName: string or undefined

TargetGroupFullName
^^^^^^^^^^^^^^^^^^^

.. py:class:: TargetGroupFullName(valueOrFunction, [displayName])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.ElasticLoadBalancingV2;

      .. code-tab:: java

         import software.amazon.awscdk.services.elasticloadbalancingv2.TargetGroupFullName;

      .. code-tab:: javascript

         const { TargetGroupFullName } = require('@aws-cdk/aws-elasticloadbalancingv2');

      .. code-tab:: typescript

         import { TargetGroupFullName } from '@aws-cdk/aws-elasticloadbalancingv2';



   :extends: :py:class:`@aws-cdk/cdk.CloudFormationToken`
   :param valueOrFunction: What this token will evaluate to, literal or function.
   :type valueOrFunction: any
   :param displayName: A human-readable display hint for this Token
   :type displayName: string or undefined

TargetGroupLoadBalancerArns
^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: TargetGroupLoadBalancerArns(valueOrFunction, [displayName])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.ElasticLoadBalancingV2;

      .. code-tab:: java

         import software.amazon.awscdk.services.elasticloadbalancingv2.TargetGroupLoadBalancerArns;

      .. code-tab:: javascript

         const { TargetGroupLoadBalancerArns } = require('@aws-cdk/aws-elasticloadbalancingv2');

      .. code-tab:: typescript

         import { TargetGroupLoadBalancerArns } from '@aws-cdk/aws-elasticloadbalancingv2';



   :extends: :py:class:`@aws-cdk/cdk.CloudFormationToken`
   :param valueOrFunction: What this token will evaluate to, literal or function.
   :type valueOrFunction: any
   :param displayName: A human-readable display hint for this Token
   :type displayName: string or undefined

TargetGroupName
^^^^^^^^^^^^^^^

.. py:class:: TargetGroupName(valueOrFunction, [displayName])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.ElasticLoadBalancingV2;

      .. code-tab:: java

         import software.amazon.awscdk.services.elasticloadbalancingv2.TargetGroupName;

      .. code-tab:: javascript

         const { TargetGroupName } = require('@aws-cdk/aws-elasticloadbalancingv2');

      .. code-tab:: typescript

         import { TargetGroupName } from '@aws-cdk/aws-elasticloadbalancingv2';



   :extends: :py:class:`@aws-cdk/cdk.CloudFormationToken`
   :param valueOrFunction: What this token will evaluate to, literal or function.
   :type valueOrFunction: any
   :param displayName: A human-readable display hint for this Token
   :type displayName: string or undefined


cloudformation
^^^^^^^^^^^^^^
.. py:module:: @aws-cdk/aws-elasticloadbalancingv2.cloudformation

ListenerCertificateResource
~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: ListenerCertificateResource(parent, name, properties)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.ElasticLoadBalancingV2;

      .. code-tab:: java

         import software.amazon.awscdk.services.elasticloadbalancingv2.cloudformation.ListenerCertificateResource;

      .. code-tab:: javascript

         const { cloudformation.ListenerCertificateResource } = require('@aws-cdk/aws-elasticloadbalancingv2');

      .. code-tab:: typescript

         import { cloudformation.ListenerCertificateResource } from '@aws-cdk/aws-elasticloadbalancingv2';



   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``ListenerCertificateResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``ListenerCertificateResource``
   :type properties: :py:class:`~@aws-cdk/aws-elasticloadbalancingv2.cloudformation.ListenerCertificateResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: string => any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


   .. py:attribute:: ref

      :type: :py:class:`~@aws-cdk/aws-elasticloadbalancingv2.ListenerCertificateArn` *(readonly)*

   .. py:class:: CertificateProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.ElasticLoadBalancingV2;

         .. code-tab:: java

            import software.amazon.awscdk.services.elasticloadbalancingv2.cloudformation.ListenerCertificateResource.CertificateProperty;

         .. code-tab:: javascript

            // cloudformation.ListenerCertificateResource.CertificateProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.ListenerCertificateResource.CertificateProperty } from '@aws-cdk/aws-elasticloadbalancingv2';





      .. py:attribute:: certificateArn

         ``ListenerCertificateResource.CertificateProperty.CertificateArn``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-elasticloadbalancingv2-listener-certificates.html#cfn-elasticloadbalancingv2-listener-certificates-certificatearn


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined



ListenerCertificateResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: ListenerCertificateResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.ElasticLoadBalancingV2;

      .. code-tab:: java

         import software.amazon.awscdk.services.elasticloadbalancingv2.cloudformation.ListenerCertificateResourceProps;

      .. code-tab:: javascript

         // cloudformation.ListenerCertificateResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.ListenerCertificateResourceProps } from '@aws-cdk/aws-elasticloadbalancingv2';





   .. py:attribute:: certificates

      ``AWS::ElasticLoadBalancingV2::ListenerCertificate.Certificates``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-elasticloadbalancingv2-listenercertificate.html#cfn-elasticloadbalancingv2-listenercertificate-certificates


      :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or (:py:class:`@aws-cdk/cdk.CloudFormationToken` or :py:class:`~@aws-cdk/aws-elasticloadbalancingv2.cloudformation.ListenerCertificateResource.CertificateProperty`)[]


   .. py:attribute:: listenerArn

      ``AWS::ElasticLoadBalancingV2::ListenerCertificate.ListenerArn``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-elasticloadbalancingv2-listenercertificate.html#cfn-elasticloadbalancingv2-listenercertificate-listenerarn


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


ListenerResource
~~~~~~~~~~~~~~~~

.. py:class:: ListenerResource(parent, name, properties)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.ElasticLoadBalancingV2;

      .. code-tab:: java

         import software.amazon.awscdk.services.elasticloadbalancingv2.cloudformation.ListenerResource;

      .. code-tab:: javascript

         const { cloudformation.ListenerResource } = require('@aws-cdk/aws-elasticloadbalancingv2');

      .. code-tab:: typescript

         import { cloudformation.ListenerResource } from '@aws-cdk/aws-elasticloadbalancingv2';



   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``ListenerResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``ListenerResource``
   :type properties: :py:class:`~@aws-cdk/aws-elasticloadbalancingv2.cloudformation.ListenerResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: string => any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


   .. py:attribute:: ref

      :type: :py:class:`~@aws-cdk/aws-elasticloadbalancingv2.ListenerArn` *(readonly)*

   .. py:class:: ActionProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.ElasticLoadBalancingV2;

         .. code-tab:: java

            import software.amazon.awscdk.services.elasticloadbalancingv2.cloudformation.ListenerResource.ActionProperty;

         .. code-tab:: javascript

            // cloudformation.ListenerResource.ActionProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.ListenerResource.ActionProperty } from '@aws-cdk/aws-elasticloadbalancingv2';





      .. py:attribute:: targetGroupArn

         ``ListenerResource.ActionProperty.TargetGroupArn``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-elasticloadbalancingv2-listener-defaultactions.html#cfn-elasticloadbalancingv2-listener-defaultactions-targetgrouparn


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


      .. py:attribute:: type

         ``ListenerResource.ActionProperty.Type``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-elasticloadbalancingv2-listener-defaultactions.html#cfn-elasticloadbalancingv2-listener-defaultactions-type


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


   .. py:class:: CertificateProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.ElasticLoadBalancingV2;

         .. code-tab:: java

            import software.amazon.awscdk.services.elasticloadbalancingv2.cloudformation.ListenerResource.CertificateProperty;

         .. code-tab:: javascript

            // cloudformation.ListenerResource.CertificateProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.ListenerResource.CertificateProperty } from '@aws-cdk/aws-elasticloadbalancingv2';





      .. py:attribute:: certificateArn

         ``ListenerResource.CertificateProperty.CertificateArn``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-elasticloadbalancingv2-listener-certificates.html#cfn-elasticloadbalancingv2-listener-certificates-certificatearn


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined



ListenerResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: ListenerResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.ElasticLoadBalancingV2;

      .. code-tab:: java

         import software.amazon.awscdk.services.elasticloadbalancingv2.cloudformation.ListenerResourceProps;

      .. code-tab:: javascript

         // cloudformation.ListenerResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.ListenerResourceProps } from '@aws-cdk/aws-elasticloadbalancingv2';





   .. py:attribute:: defaultActions

      ``AWS::ElasticLoadBalancingV2::Listener.DefaultActions``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-elasticloadbalancingv2-listener.html#cfn-elasticloadbalancingv2-listener-defaultactions


      :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or (:py:class:`~@aws-cdk/aws-elasticloadbalancingv2.cloudformation.ListenerResource.ActionProperty` or :py:class:`@aws-cdk/cdk.CloudFormationToken`)[]


   .. py:attribute:: loadBalancerArn

      ``AWS::ElasticLoadBalancingV2::Listener.LoadBalancerArn``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-elasticloadbalancingv2-listener.html#cfn-elasticloadbalancingv2-listener-loadbalancerarn


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


   .. py:attribute:: port

      ``AWS::ElasticLoadBalancingV2::Listener.Port``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-elasticloadbalancingv2-listener.html#cfn-elasticloadbalancingv2-listener-port


      :type: number or :py:class:`@aws-cdk/cdk.CloudFormationToken`


   .. py:attribute:: protocol

      ``AWS::ElasticLoadBalancingV2::Listener.Protocol``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-elasticloadbalancingv2-listener.html#cfn-elasticloadbalancingv2-listener-protocol


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


   .. py:attribute:: certificates

      ``AWS::ElasticLoadBalancingV2::Listener.Certificates``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-elasticloadbalancingv2-listener.html#cfn-elasticloadbalancingv2-listener-certificates


      :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or (:py:class:`@aws-cdk/cdk.CloudFormationToken` or :py:class:`~@aws-cdk/aws-elasticloadbalancingv2.cloudformation.ListenerResource.CertificateProperty`)[] or undefined


   .. py:attribute:: sslPolicy

      ``AWS::ElasticLoadBalancingV2::Listener.SslPolicy``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-elasticloadbalancingv2-listener.html#cfn-elasticloadbalancingv2-listener-sslpolicy


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


ListenerRuleResource
~~~~~~~~~~~~~~~~~~~~

.. py:class:: ListenerRuleResource(parent, name, properties)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.ElasticLoadBalancingV2;

      .. code-tab:: java

         import software.amazon.awscdk.services.elasticloadbalancingv2.cloudformation.ListenerRuleResource;

      .. code-tab:: javascript

         const { cloudformation.ListenerRuleResource } = require('@aws-cdk/aws-elasticloadbalancingv2');

      .. code-tab:: typescript

         import { cloudformation.ListenerRuleResource } from '@aws-cdk/aws-elasticloadbalancingv2';



   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``ListenerRuleResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``ListenerRuleResource``
   :type properties: :py:class:`~@aws-cdk/aws-elasticloadbalancingv2.cloudformation.ListenerRuleResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: string => any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


   .. py:attribute:: ref

      :type: :py:class:`~@aws-cdk/aws-elasticloadbalancingv2.ListenerRuleArn` *(readonly)*

   .. py:class:: ActionProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.ElasticLoadBalancingV2;

         .. code-tab:: java

            import software.amazon.awscdk.services.elasticloadbalancingv2.cloudformation.ListenerRuleResource.ActionProperty;

         .. code-tab:: javascript

            // cloudformation.ListenerRuleResource.ActionProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.ListenerRuleResource.ActionProperty } from '@aws-cdk/aws-elasticloadbalancingv2';





      .. py:attribute:: targetGroupArn

         ``ListenerRuleResource.ActionProperty.TargetGroupArn``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-elasticloadbalancingv2-listenerrule-actions.html#cfn-elasticloadbalancingv2-listener-actions-targetgrouparn


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


      .. py:attribute:: type

         ``ListenerRuleResource.ActionProperty.Type``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-elasticloadbalancingv2-listenerrule-actions.html#cfn-elasticloadbalancingv2-listener-actions-type


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


   .. py:class:: RuleConditionProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.ElasticLoadBalancingV2;

         .. code-tab:: java

            import software.amazon.awscdk.services.elasticloadbalancingv2.cloudformation.ListenerRuleResource.RuleConditionProperty;

         .. code-tab:: javascript

            // cloudformation.ListenerRuleResource.RuleConditionProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.ListenerRuleResource.RuleConditionProperty } from '@aws-cdk/aws-elasticloadbalancingv2';





      .. py:attribute:: field

         ``ListenerRuleResource.RuleConditionProperty.Field``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-elasticloadbalancingv2-listenerrule-conditions.html#cfn-elasticloadbalancingv2-listenerrule-conditions-field


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


      .. py:attribute:: values

         ``ListenerRuleResource.RuleConditionProperty.Values``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-elasticloadbalancingv2-listenerrule-conditions.html#cfn-elasticloadbalancingv2-listenerrule-conditions-values


         :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or (string or :py:class:`@aws-cdk/cdk.CloudFormationToken`)[] or undefined



ListenerRuleResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: ListenerRuleResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.ElasticLoadBalancingV2;

      .. code-tab:: java

         import software.amazon.awscdk.services.elasticloadbalancingv2.cloudformation.ListenerRuleResourceProps;

      .. code-tab:: javascript

         // cloudformation.ListenerRuleResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.ListenerRuleResourceProps } from '@aws-cdk/aws-elasticloadbalancingv2';





   .. py:attribute:: actions

      ``AWS::ElasticLoadBalancingV2::ListenerRule.Actions``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-elasticloadbalancingv2-listenerrule.html#cfn-elasticloadbalancingv2-listenerrule-actions


      :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or (:py:class:`@aws-cdk/cdk.CloudFormationToken` or :py:class:`~@aws-cdk/aws-elasticloadbalancingv2.cloudformation.ListenerRuleResource.ActionProperty`)[]


   .. py:attribute:: conditions

      ``AWS::ElasticLoadBalancingV2::ListenerRule.Conditions``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-elasticloadbalancingv2-listenerrule.html#cfn-elasticloadbalancingv2-listenerrule-conditions


      :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or (:py:class:`@aws-cdk/cdk.CloudFormationToken` or :py:class:`~@aws-cdk/aws-elasticloadbalancingv2.cloudformation.ListenerRuleResource.RuleConditionProperty`)[]


   .. py:attribute:: listenerArn

      ``AWS::ElasticLoadBalancingV2::ListenerRule.ListenerArn``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-elasticloadbalancingv2-listenerrule.html#cfn-elasticloadbalancingv2-listenerrule-listenerarn


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


   .. py:attribute:: priority

      ``AWS::ElasticLoadBalancingV2::ListenerRule.Priority``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-elasticloadbalancingv2-listenerrule.html#cfn-elasticloadbalancingv2-listenerrule-priority


      :type: number or :py:class:`@aws-cdk/cdk.CloudFormationToken`


LoadBalancerResource
~~~~~~~~~~~~~~~~~~~~

.. py:class:: LoadBalancerResource(parent, name, [properties])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.ElasticLoadBalancingV2;

      .. code-tab:: java

         import software.amazon.awscdk.services.elasticloadbalancingv2.cloudformation.LoadBalancerResource;

      .. code-tab:: javascript

         const { cloudformation.LoadBalancerResource } = require('@aws-cdk/aws-elasticloadbalancingv2');

      .. code-tab:: typescript

         import { cloudformation.LoadBalancerResource } from '@aws-cdk/aws-elasticloadbalancingv2';



   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``LoadBalancerResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``LoadBalancerResource``
   :type properties: :py:class:`~@aws-cdk/aws-elasticloadbalancingv2.cloudformation.LoadBalancerResourceProps` or undefined

   .. py:method:: renderProperties() -> string => any

      :rtype: string => any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


   .. py:attribute:: loadBalancerCanonicalHostedZoneId

      :type: :py:class:`~@aws-cdk/aws-elasticloadbalancingv2.LoadBalancerCanonicalHostedZoneId` *(readonly)*


   .. py:attribute:: loadBalancerDnsName

      :type: :py:class:`~@aws-cdk/aws-elasticloadbalancingv2.LoadBalancerDnsName` *(readonly)*


   .. py:attribute:: loadBalancerFullName

      :type: :py:class:`~@aws-cdk/aws-elasticloadbalancingv2.LoadBalancerFullName` *(readonly)*


   .. py:attribute:: loadBalancerName

      :type: :py:class:`~@aws-cdk/aws-elasticloadbalancingv2.LoadBalancerName` *(readonly)*


   .. py:attribute:: loadBalancerSecurityGroups

      :type: :py:class:`~@aws-cdk/aws-elasticloadbalancingv2.LoadBalancerSecurityGroups` *(readonly)*


   .. py:attribute:: ref

      :type: :py:class:`~@aws-cdk/aws-elasticloadbalancingv2.LoadBalancerArn` *(readonly)*

   .. py:class:: LoadBalancerAttributeProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.ElasticLoadBalancingV2;

         .. code-tab:: java

            import software.amazon.awscdk.services.elasticloadbalancingv2.cloudformation.LoadBalancerResource.LoadBalancerAttributeProperty;

         .. code-tab:: javascript

            // cloudformation.LoadBalancerResource.LoadBalancerAttributeProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.LoadBalancerResource.LoadBalancerAttributeProperty } from '@aws-cdk/aws-elasticloadbalancingv2';





      .. py:attribute:: key

         ``LoadBalancerResource.LoadBalancerAttributeProperty.Key``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-elasticloadbalancingv2-loadbalancer-loadbalancerattributes.html#cfn-elasticloadbalancingv2-loadbalancer-loadbalancerattributes-key


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


      .. py:attribute:: value

         ``LoadBalancerResource.LoadBalancerAttributeProperty.Value``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-elasticloadbalancingv2-loadbalancer-loadbalancerattributes.html#cfn-elasticloadbalancingv2-loadbalancer-loadbalancerattributes-value


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:class:: SubnetMappingProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.ElasticLoadBalancingV2;

         .. code-tab:: java

            import software.amazon.awscdk.services.elasticloadbalancingv2.cloudformation.LoadBalancerResource.SubnetMappingProperty;

         .. code-tab:: javascript

            // cloudformation.LoadBalancerResource.SubnetMappingProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.LoadBalancerResource.SubnetMappingProperty } from '@aws-cdk/aws-elasticloadbalancingv2';





      .. py:attribute:: allocationId

         ``LoadBalancerResource.SubnetMappingProperty.AllocationId``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-elasticloadbalancingv2-loadbalancer-subnetmapping.html#cfn-elasticloadbalancingv2-loadbalancer-subnetmapping-allocationid


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


      .. py:attribute:: subnetId

         ``LoadBalancerResource.SubnetMappingProperty.SubnetId``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-elasticloadbalancingv2-loadbalancer-subnetmapping.html#cfn-elasticloadbalancingv2-loadbalancer-subnetmapping-subnetid


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`



LoadBalancerResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: LoadBalancerResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.ElasticLoadBalancingV2;

      .. code-tab:: java

         import software.amazon.awscdk.services.elasticloadbalancingv2.cloudformation.LoadBalancerResourceProps;

      .. code-tab:: javascript

         // cloudformation.LoadBalancerResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.LoadBalancerResourceProps } from '@aws-cdk/aws-elasticloadbalancingv2';





   .. py:attribute:: ipAddressType

      ``AWS::ElasticLoadBalancingV2::LoadBalancer.IpAddressType``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-elasticloadbalancingv2-loadbalancer.html#cfn-elasticloadbalancingv2-loadbalancer-ipaddresstype


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:attribute:: loadBalancerAttributes

      ``AWS::ElasticLoadBalancingV2::LoadBalancer.LoadBalancerAttributes``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-elasticloadbalancingv2-loadbalancer.html#cfn-elasticloadbalancingv2-loadbalancer-loadbalancerattributes


      :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or (:py:class:`@aws-cdk/cdk.CloudFormationToken` or :py:class:`~@aws-cdk/aws-elasticloadbalancingv2.cloudformation.LoadBalancerResource.LoadBalancerAttributeProperty`)[] or undefined


   .. py:attribute:: loadBalancerName

      ``AWS::ElasticLoadBalancingV2::LoadBalancer.Name``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-elasticloadbalancingv2-loadbalancer.html#cfn-elasticloadbalancingv2-loadbalancer-name


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:attribute:: scheme

      ``AWS::ElasticLoadBalancingV2::LoadBalancer.Scheme``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-elasticloadbalancingv2-loadbalancer.html#cfn-elasticloadbalancingv2-loadbalancer-scheme


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:attribute:: securityGroups

      ``AWS::ElasticLoadBalancingV2::LoadBalancer.SecurityGroups``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-elasticloadbalancingv2-loadbalancer.html#cfn-elasticloadbalancingv2-loadbalancer-securitygroups


      :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or (string or :py:class:`@aws-cdk/cdk.CloudFormationToken`)[] or undefined


   .. py:attribute:: subnetMappings

      ``AWS::ElasticLoadBalancingV2::LoadBalancer.SubnetMappings``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-elasticloadbalancingv2-loadbalancer.html#cfn-elasticloadbalancingv2-loadbalancer-subnetmappings


      :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or (:py:class:`@aws-cdk/cdk.CloudFormationToken` or :py:class:`~@aws-cdk/aws-elasticloadbalancingv2.cloudformation.LoadBalancerResource.SubnetMappingProperty`)[] or undefined


   .. py:attribute:: subnets

      ``AWS::ElasticLoadBalancingV2::LoadBalancer.Subnets``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-elasticloadbalancingv2-loadbalancer.html#cfn-elasticloadbalancingv2-loadbalancer-subnets


      :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or (string or :py:class:`@aws-cdk/cdk.CloudFormationToken`)[] or undefined


   .. py:attribute:: tags

      ``AWS::ElasticLoadBalancingV2::LoadBalancer.Tags``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-elasticloadbalancingv2-loadbalancer.html#cfn-elasticloadbalancingv2-loadbalancer-tags


      :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or (:py:class:`@aws-cdk/cdk.CloudFormationToken` or :py:class:`@aws-cdk/cdk.Tag`)[] or undefined


   .. py:attribute:: type

      ``AWS::ElasticLoadBalancingV2::LoadBalancer.Type``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-elasticloadbalancingv2-loadbalancer.html#cfn-elasticloadbalancingv2-loadbalancer-type


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


TargetGroupResource
~~~~~~~~~~~~~~~~~~~

.. py:class:: TargetGroupResource(parent, name, properties)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.ElasticLoadBalancingV2;

      .. code-tab:: java

         import software.amazon.awscdk.services.elasticloadbalancingv2.cloudformation.TargetGroupResource;

      .. code-tab:: javascript

         const { cloudformation.TargetGroupResource } = require('@aws-cdk/aws-elasticloadbalancingv2');

      .. code-tab:: typescript

         import { cloudformation.TargetGroupResource } from '@aws-cdk/aws-elasticloadbalancingv2';



   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``TargetGroupResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``TargetGroupResource``
   :type properties: :py:class:`~@aws-cdk/aws-elasticloadbalancingv2.cloudformation.TargetGroupResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: string => any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


   .. py:attribute:: ref

      :type: :py:class:`~@aws-cdk/aws-elasticloadbalancingv2.TargetGroupArn` *(readonly)*


   .. py:attribute:: targetGroupFullName

      :type: :py:class:`~@aws-cdk/aws-elasticloadbalancingv2.TargetGroupFullName` *(readonly)*


   .. py:attribute:: targetGroupLoadBalancerArns

      :type: :py:class:`~@aws-cdk/aws-elasticloadbalancingv2.TargetGroupLoadBalancerArns` *(readonly)*


   .. py:attribute:: targetGroupName

      :type: :py:class:`~@aws-cdk/aws-elasticloadbalancingv2.TargetGroupName` *(readonly)*

   .. py:class:: MatcherProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.ElasticLoadBalancingV2;

         .. code-tab:: java

            import software.amazon.awscdk.services.elasticloadbalancingv2.cloudformation.TargetGroupResource.MatcherProperty;

         .. code-tab:: javascript

            // cloudformation.TargetGroupResource.MatcherProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.TargetGroupResource.MatcherProperty } from '@aws-cdk/aws-elasticloadbalancingv2';





      .. py:attribute:: httpCode

         ``TargetGroupResource.MatcherProperty.HttpCode``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-elasticloadbalancingv2-targetgroup-matcher.html#cfn-elasticloadbalancingv2-targetgroup-matcher-httpcode


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


   .. py:class:: TargetDescriptionProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.ElasticLoadBalancingV2;

         .. code-tab:: java

            import software.amazon.awscdk.services.elasticloadbalancingv2.cloudformation.TargetGroupResource.TargetDescriptionProperty;

         .. code-tab:: javascript

            // cloudformation.TargetGroupResource.TargetDescriptionProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.TargetGroupResource.TargetDescriptionProperty } from '@aws-cdk/aws-elasticloadbalancingv2';





      .. py:attribute:: id

         ``TargetGroupResource.TargetDescriptionProperty.Id``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-elasticloadbalancingv2-targetgroup-targetdescription.html#cfn-elasticloadbalancingv2-targetgroup-targetdescription-id


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


      .. py:attribute:: availabilityZone

         ``TargetGroupResource.TargetDescriptionProperty.AvailabilityZone``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-elasticloadbalancingv2-targetgroup-targetdescription.html#cfn-elasticloadbalancingv2-targetgroup-targetdescription-availabilityzone


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


      .. py:attribute:: port

         ``TargetGroupResource.TargetDescriptionProperty.Port``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-elasticloadbalancingv2-targetgroup-targetdescription.html#cfn-elasticloadbalancingv2-targetgroup-targetdescription-port


         :type: number or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:class:: TargetGroupAttributeProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.ElasticLoadBalancingV2;

         .. code-tab:: java

            import software.amazon.awscdk.services.elasticloadbalancingv2.cloudformation.TargetGroupResource.TargetGroupAttributeProperty;

         .. code-tab:: javascript

            // cloudformation.TargetGroupResource.TargetGroupAttributeProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.TargetGroupResource.TargetGroupAttributeProperty } from '@aws-cdk/aws-elasticloadbalancingv2';





      .. py:attribute:: key

         ``TargetGroupResource.TargetGroupAttributeProperty.Key``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-elasticloadbalancingv2-targetgroup-targetgroupattribute.html#cfn-elasticloadbalancingv2-targetgroup-targetgroupattribute-key


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


      .. py:attribute:: value

         ``TargetGroupResource.TargetGroupAttributeProperty.Value``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-elasticloadbalancingv2-targetgroup-targetgroupattribute.html#cfn-elasticloadbalancingv2-targetgroup-targetgroupattribute-value


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined



TargetGroupResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: TargetGroupResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.ElasticLoadBalancingV2;

      .. code-tab:: java

         import software.amazon.awscdk.services.elasticloadbalancingv2.cloudformation.TargetGroupResourceProps;

      .. code-tab:: javascript

         // cloudformation.TargetGroupResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.TargetGroupResourceProps } from '@aws-cdk/aws-elasticloadbalancingv2';





   .. py:attribute:: port

      ``AWS::ElasticLoadBalancingV2::TargetGroup.Port``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-elasticloadbalancingv2-targetgroup.html#cfn-elasticloadbalancingv2-targetgroup-port


      :type: number or :py:class:`@aws-cdk/cdk.CloudFormationToken`


   .. py:attribute:: protocol

      ``AWS::ElasticLoadBalancingV2::TargetGroup.Protocol``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-elasticloadbalancingv2-targetgroup.html#cfn-elasticloadbalancingv2-targetgroup-protocol


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


   .. py:attribute:: vpcId

      ``AWS::ElasticLoadBalancingV2::TargetGroup.VpcId``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-elasticloadbalancingv2-targetgroup.html#cfn-elasticloadbalancingv2-targetgroup-vpcid


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


   .. py:attribute:: healthCheckIntervalSeconds

      ``AWS::ElasticLoadBalancingV2::TargetGroup.HealthCheckIntervalSeconds``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-elasticloadbalancingv2-targetgroup.html#cfn-elasticloadbalancingv2-targetgroup-healthcheckintervalseconds


      :type: number or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:attribute:: healthCheckPath

      ``AWS::ElasticLoadBalancingV2::TargetGroup.HealthCheckPath``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-elasticloadbalancingv2-targetgroup.html#cfn-elasticloadbalancingv2-targetgroup-healthcheckpath


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:attribute:: healthCheckPort

      ``AWS::ElasticLoadBalancingV2::TargetGroup.HealthCheckPort``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-elasticloadbalancingv2-targetgroup.html#cfn-elasticloadbalancingv2-targetgroup-healthcheckport


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:attribute:: healthCheckProtocol

      ``AWS::ElasticLoadBalancingV2::TargetGroup.HealthCheckProtocol``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-elasticloadbalancingv2-targetgroup.html#cfn-elasticloadbalancingv2-targetgroup-healthcheckprotocol


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:attribute:: healthCheckTimeoutSeconds

      ``AWS::ElasticLoadBalancingV2::TargetGroup.HealthCheckTimeoutSeconds``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-elasticloadbalancingv2-targetgroup.html#cfn-elasticloadbalancingv2-targetgroup-healthchecktimeoutseconds


      :type: number or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:attribute:: healthyThresholdCount

      ``AWS::ElasticLoadBalancingV2::TargetGroup.HealthyThresholdCount``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-elasticloadbalancingv2-targetgroup.html#cfn-elasticloadbalancingv2-targetgroup-healthythresholdcount


      :type: number or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:attribute:: matcher

      ``AWS::ElasticLoadBalancingV2::TargetGroup.Matcher``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-elasticloadbalancingv2-targetgroup.html#cfn-elasticloadbalancingv2-targetgroup-matcher


      :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or :py:class:`~@aws-cdk/aws-elasticloadbalancingv2.cloudformation.TargetGroupResource.MatcherProperty` or undefined


   .. py:attribute:: tags

      ``AWS::ElasticLoadBalancingV2::TargetGroup.Tags``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-elasticloadbalancingv2-targetgroup.html#cfn-elasticloadbalancingv2-targetgroup-tags


      :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or (:py:class:`@aws-cdk/cdk.CloudFormationToken` or :py:class:`@aws-cdk/cdk.Tag`)[] or undefined


   .. py:attribute:: targetGroupAttributes

      ``AWS::ElasticLoadBalancingV2::TargetGroup.TargetGroupAttributes``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-elasticloadbalancingv2-targetgroup.html#cfn-elasticloadbalancingv2-targetgroup-targetgroupattributes


      :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or (:py:class:`@aws-cdk/cdk.CloudFormationToken` or :py:class:`~@aws-cdk/aws-elasticloadbalancingv2.cloudformation.TargetGroupResource.TargetGroupAttributeProperty`)[] or undefined


   .. py:attribute:: targetGroupName

      ``AWS::ElasticLoadBalancingV2::TargetGroup.Name``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-elasticloadbalancingv2-targetgroup.html#cfn-elasticloadbalancingv2-targetgroup-name


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:attribute:: targets

      ``AWS::ElasticLoadBalancingV2::TargetGroup.Targets``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-elasticloadbalancingv2-targetgroup.html#cfn-elasticloadbalancingv2-targetgroup-targets


      :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or (:py:class:`@aws-cdk/cdk.CloudFormationToken` or :py:class:`~@aws-cdk/aws-elasticloadbalancingv2.cloudformation.TargetGroupResource.TargetDescriptionProperty`)[] or undefined


   .. py:attribute:: targetType

      ``AWS::ElasticLoadBalancingV2::TargetGroup.TargetType``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-elasticloadbalancingv2-targetgroup.html#cfn-elasticloadbalancingv2-targetgroup-targettype


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:attribute:: unhealthyThresholdCount

      ``AWS::ElasticLoadBalancingV2::TargetGroup.UnhealthyThresholdCount``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-elasticloadbalancingv2-targetgroup.html#cfn-elasticloadbalancingv2-targetgroup-unhealthythresholdcount


      :type: number or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined



.. py:currentmodule:: @aws-cdk/aws-elasticloadbalancingv2

